WIP
- refactor: make the whole thing more type-safe by introducing @Transform and @Replace
- tests: improve by doing the full round-trip from source file to generated file